<?xml version="1.0"?>
<package format="2">
  <name>livox_interfaces</name>
  <version>0.0.1</version>
  <description>Custom messages for Livox sensors</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

</package>

